# Projeto_automacao

./: README.md  analytics.py  main.py  pyproject.toml  tesks.txt
API/: database.py  metadata_tables.db  start.py  tables.db
API/models/: model_data.py  models_metadata.py
API/routers/: router_analytics.py  router_data.py  router_metadata.py
API/schema/: schema_data.py  schema_metadata.py
data/: orders.csv
data/csv_files/: output_consolidado.csv
data/data_frames/data_frame_csv/: combined_data.csv
data/json_files/: output_consolidado.json
data_pipeline/src/classes/ETL_source/: AbstractEtlSource.py  EtlSource.py
data_pipeline/src/classes/ETL_source/Columns/: ColumnsCsv.py  ColumnsJson.py  ColumnsSource.py
data_pipeline/src/classes/ETL_source/Output/: Output.py  OutputCsv.py  OutputJson.py
data_pipeline/src/classes/api_intagrations/: ControllerCsv.py  ControllerJson.py  ControllerSource.py
data_pipeline/src/classes/data_search/: AbstractDataSource.py  CsvSource.py  FilesSources.py  JsonSource.py  TxtSource.py
